test/data/golden/pass/exists_requires.sv0
fn main() -> i32 requires(exists(k in 0..3, k == 2)) ensures(true) {
  return 0;
}
