test/data/golden/fail/exists_in_body.sv0
fn main() -> i32 {
  let _b: bool = exists(i in 0..4, i == 2);
  return 0;
}
